Added a V3 version code to `Combinations`