@@ -1,35 +1,39 @@
 package main.casestudies.combinations;
 
+import sun.awt.image.ImageWatched;
+
 import java.util.ArrayList;
+import java.util.LinkedHashSet;
+import java.util.LinkedList;
 import java.util.List;
 
-public class CombinationsV2 {
-    private final List<List<Integer>> answer = new ArrayList<>();
+public class CombinationsV3 {
+    private final List<List<Integer>> answer = new LinkedList<>();
     int n;
     int k;
 
-    private void recur(int number, List<Integer> combination) {
+    private void recur(int number, LinkedList<Integer> combination) {
         if (combination.size() == k) {
-            answer.add(new ArrayList<>(combination));
+            answer.add(new LinkedList<>(combination));
             return;
         }
 
         for (int i = number; i <= n; i++) {
             combination.add(i);
             recur(i + 1, combination);
-            combination.remove(combination.size() - 1);
+            combination.removeLast();
         }
     }
 
     public List<List<Integer>> combine(int n, int k) {
         this.n = n;
         this.k = k;
-        recur(1,  new ArrayList<>());
+        recur(1, new LinkedList<>());
         return answer;
     }
 
     public static void main(String[] args) {
-        CombinationsV2 solution = new CombinationsV2();
+        CombinationsV3 solution = new CombinationsV3();
         List<List<Integer>> answer = solution.combine(4, 3);
         for (List<Integer> combination : answer) {
             System.out.println(combination.toString());
